--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:ci": "tsc --noEmit && vitest --coverage --coverage.reporter=lcov --coverage.include=src/**",
-    "build": "tsup",
-    "gzip-size": "esbuild src/index.ts --bundle --format=esm --mangle-props=_$ --mangle-cache=mangle-cache.json --minify | gzip-size --include-original"
+    "build": "tsup"
   },
   "maintainers": [
     {
@@ -44,11 +43,9 @@
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
     "@vitest/coverage-v8": "^1.5.0",
-    "esbuild": "^0.21.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.27.5",
-    "gzip-size-cli": "^5.1.0",
     "prettier": "^2.8.8",
     "tsup": "^8.2.4",
     "typedoc": "^0.26.6",
