--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "Bundler",
     "esModuleInterop": true,
     "isolatedModules": true,
+    "isolatedDeclarations": true,
     "noFallthroughCasesInSwitch": true,
     "noUnusedParameters": true,
     "noImplicitOverride": true,
