--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     }
   ],
   "devDependencies": {
+    "@types/node": "^22.5.4",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
     "@vitest/coverage-v8": "^1.5.0",
@@ -50,6 +51,7 @@
     "tsup": "^8.2.4",
     "typedoc": "^0.26.6",
     "typescript": "^5.5.4",
+    "value-enhancer": "^5.5.0",
     "vitest": "^1.5.0"
   },
   "pnpm": {
