--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint": "eslint --ext .ts,.tsx . && prettier --check .",
     "docs": "typedoc --options typedoc.json",
     "test": "vitest",
+    "bench": "vitest bench --run",
     "test:coverage": "vitest --coverage",
     "test:ci": "tsc --noEmit && vitest --coverage --coverage.reporter=lcov --coverage.include=src/**",
     "build": "tsup"
