--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "docs": "typedoc --options typedoc.json",
     "test": "vitest",
     "bench": "vitest bench --run",
-    "test:coverage": "vitest --coverage",
-    "test:ci": "tsc --noEmit && vitest --coverage --coverage.reporter=lcov --coverage.include=src/**",
+    "test:coverage": "vitest run --coverage --coverage.include=src/** --coverage.exclude=**/*.bench.ts --coverage.exclude=src/index.ts",
+    "test:ci": "tsc --noEmit && vitest run --coverage --coverage.reporter=lcov --coverage.include=src/** --coverage.exclude=**/*.bench.ts --coverage.exclude=src/index.ts",
     "build": "tsup"
   },
   "maintainers": [
