--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "scripts": {
     "prepublishOnly": "pnpm run build",
-    "lint": "eslint --ext .ts,.tsx . && prettier --check .",
+    "lint": "eslint && prettier --check .",
     "docs": "typedoc --options typedoc.json",
     "test": "vitest",
     "bench": "vitest bench --run",
@@ -41,24 +41,27 @@
     }
   ],
   "devDependencies": {
-    "@types/node": "^22.5.4",
-    "@typescript-eslint/eslint-plugin": "^8.2.0",
-    "@typescript-eslint/parser": "^8.2.0",
-    "@vitest/coverage-v8": "^1.5.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-import": "^2.27.5",
-    "prettier": "^2.8.8",
-    "tsup": "^8.2.4",
-    "typedoc": "^0.26.6",
+    "@eslint/js": "^9.12.0",
+    "@vitest/coverage-v8": "^2.1.2",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "gzip-size": "^7.0.0",
+    "prettier": "^3.3.3",
+    "pretty-bytes": "^6.1.1",
+    "tsup": "^8.3.0",
+    "typedoc": "^0.26.9",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.8.1",
     "value-enhancer": "^5.5.0",
-    "vitest": "^1.5.0"
+    "vitest": "^2.1.2",
+    "yoctocolors": "^2.1.1"
   },
   "pnpm": {
     "overrides": {
       "tsup>esbuild": "^0.21.5"
     }
   },
-  "packageManager": "pnpm@9.7.0"
+  "packageManager": "pnpm@9.12.1"
 }
