chore: add build:min

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "bench": "vitest bench --run",
     "test:coverage": "vitest run --coverage --coverage.include=src/** --coverage.exclude=**/*.bench.ts --coverage.exclude=src/index.ts",
     "test:ci": "tsc --noEmit && vitest run --coverage --coverage.reporter=lcov --coverage.include=src/** --coverage.exclude=**/*.bench.ts --coverage.exclude=src/index.ts",
-    "build": "tsup"
+    "build": "tsup",
+    "build:min": "MINIFY=true tsup && node scripts/gzip.mjs"
   },
   "maintainers": [
     {
@@ -42,6 +43,7 @@
   ],
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@types/node": "^22.7.5",
     "@vitest/coverage-v8": "^2.1.2",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
