test: use mitata instead of vitest for bench

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint && prettier --check .",
     "docs": "typedoc --options typedoc.json",
     "test": "vitest",
-    "bench": "vitest bench --run",
+    "bench": "esbuild-dev --node:--jitless --node:--expose-gc src/event.bench.ts",
     "test:coverage": "vitest run --coverage --coverage.include=src/** --coverage.exclude=**/*.bench.ts --coverage.exclude=src/index.ts",
     "test:ci": "tsc --noEmit && vitest run --coverage --coverage.reporter=lcov --coverage.include=src/** --coverage.exclude=**/*.bench.ts --coverage.exclude=src/index.ts",
     "build": "tsup",
@@ -43,6 +43,7 @@
   ],
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@hyrious/esbuild-dev": "^0.10.11",
     "@types/node": "^22.7.5",
     "@vitest/coverage-v8": "^2.1.2",
     "eslint": "^9.12.0",
@@ -50,6 +51,7 @@
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.31.0",
     "gzip-size": "^7.0.0",
+    "mitata": "^1.0.21",
     "prettier": "^3.3.3",
     "pretty-bytes": "^6.1.1",
     "tsup": "^8.3.0",
