--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "prepublishOnly": "pnpm run build",
     "lint": "eslint && prettier --check .",
+    "lint:fix": "eslint --fix && prettier --write .",
     "docs": "typedoc --options typedoc.json",
     "test": "vitest",
     "bench": "esbuild-dev --node:--jitless --node:--expose-gc src/event.bench.ts",
